# TextGPT

./: .gitignore  README.md  install.sh  make_token.sh  message.txt  prompts.json  pyproject.toml  requirements.txt
.github/workflows/: publish-to-test-pypi.yml
WingmanGPT/: __main__.py
src/: GPT.py  __main__.py
